[workspace]
resolver = "2"

members = [
    "utils",
    "merkle-btree-storage",
    "cole-plus",
    "growable-bloom-filters",
    "eth-execution-engine",
    "patricia-trie", 
    "cole-index", 
    "pattern-oridented-split-tree", 
    "cdc-hash", 
    "benchmark", 
    "exp", 
    "cole-star", 
    "cole-plus-async", 
    "letus_new", 
    "poly-rolling", 
    "siri-tree", 
    "cole-plus-ablation-siri", "cole-ablation-layout", 
    "cole-plus-ablation-binary-search", "cole-plus-ablation-mbtree",
]
