[package]
name = "cole-ablation-layout"
version = "0.1.0"
edition = "2021"

[dependencies]
cole-index = { version = "0.1.0", path = "../cole-index" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
bincode = "1.3"
rand = "0.8.4"
primitive-types = { version = "0.10.1", features = ["serde"] }
growable-bloom-filter = { version = "2.0.1", path = "../growable-bloom-filters" }