[package]
name = "cole-plus-ablation-mbtree"
version = "0.1.0"
edition = "2021"

[dependencies]
cole-plus = { version = "0.1.0", path = "../cole-plus" }
cole-plus-async = {version = "0.1.0", path = "../cole-plus-async"  }
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
primitive-types = { version = "0.10.1", features = ["serde"] }
bincode = "1.3"