[package]
name = "cole-plus-async"
version = "0.1.0"
edition = "2021"

[dependencies]
cole-plus = { version = "0.1.0", path = "../cole-plus" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
pattern-oridented-split-tree = { version = "0.1.0", path = "../pattern-oridented-split-tree" }
bincode = "1.3"
rand = "0.8.4"
primitive-types = { version = "0.10.1", features = ["serde"] }