[package]
name = "cole-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
primitive-types = { version = "0.10.1", features = ["serde"] }
rand = "0.8.4"
merkle-btree-storage = { version = "0.1.0", path = "../merkle-btree-storage" }
utils = { version = "0.1.0", path = "../utils" }
pattern-oridented-split-tree = { version = "0.1.0", path = "../pattern-oridented-split-tree" }
growable-bloom-filter = { version = "2.0.1", path = "../growable-bloom-filters" }