[package]
name = "eth-execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
bitflags = "1.2"
bincode = "1.3"
derive_more = "0.99"
evm = { version = "0.33" }
ethabi = "15.0"
hex = "0.4"
rlp = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
once_cell = "1.7"
rand = "0.7"
regex = "1.4"
primitive-types = { version = "0.10.1", features = ["serde"] }
utils = { version = "0.1.0", path = "../utils" }
cole-plus = { version = "0.1.0", path = "../cole-plus" }
cole-index = { version = "0.1.0", path = "../cole-index" }
cole-plus-async = { version = "0.1.0", path = "../cole-plus-async" }
cole-star = { version = "0.1.0", path = "../cole-star" }
cole-plus-ablation-siri = { version = "0.1.0", path = "../cole-plus-ablation-siri" }
cole-ablation-layout = { version = "0.1.0", path = "../cole-ablation-layout" }
patricia-trie = { version = "0.1.0", path = "../patricia-trie" }
rocksdb = "0.22.0"
letus_new = { version = "0.1.0", path = "../letus_new" }
cxx = "1.0"
pattern-oridented-split-tree = { version = "0.1.0", path = "../pattern-oridented-split-tree"}
cole-plus-ablation-binary-search = { version = "0.1.0", path = "../cole-plus-ablation-binary-search" }
caches = "0.2"