[package]
name = "siri-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
poly-rolling = { version = "0.1.0", path = "../poly-rolling" }
utils = { version = "0.1.0", path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
primitive-types = { version = "0.10.1", features = ["serde"] }
anyhow = "1.0.75"
rand = "0.8.4"
postcard = "=1.0.10"