[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.10.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
bincode = "1.3"
blake2b_simd = "1.0.0"
caches = "0.2"
rug = { version = "1.14.0", features = ["serde"] }
rand = "0.8.4"
fixed_bitmaps = "0.10.2"
growable-bloom-filter = { version = "2.0.1", path = "../growable-bloom-filters" }
gearhash = "0.1.3"
cdc-hash = { version = "0.1.0", path = "../cdc-hash" }